# django_main_muya_wce

./: .dockerignore  .gitignore  .gitmodules  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
common-static/css/: layout.css
common-static/js/: forms.js
config/: muya-django.env
docker/celery/: run-celery.sh
docker/celery-dev/: run-celery.sh
docker/collation/: Dockerfile
docker/collation-dev/: Dockerfile
docker/db-dev/: Dockerfile  init-user-db.sh
docker/django/: Dockerfile  run-muya.sh
docker/django-dev/: Dockerfile  run-muya.sh
docker/django-dev/muya-startup.d/: 40_load_test_data
docker/django-prod/: muya_uwsgi.ini
docker/django/muya-startup.d/: 00_migrate-db  30_create_superuser  40_load_test_data  50_create_javascript_config
docker/django/prod/: muya_uwsgi.ini
docker/rabbitmq-dev/: Dockerfile
docs/: user_guide.rst
muya_wce/: celery.py  settings-example.py  settings.py  urls.py  views.py  wsgi.py
muya_wce/setup/: apps.py
muya_wce/setup/management/commands/: auto_createsuperuser.py
muya_wce/templates/: base.html  index.html  privacy.html
